client/src/components/Changes.css
.changes-container {
  display: flex;
  flex-direction: row;
  width: 700px;
  height: 500px;
  gap: 20px;
}

.change-box {
  display: flex;
  flex-direction: column;
  width: 50%;
  background-color: #444;
  border-radius: 10px;
  padding: 10px;
}

.change-box h3 {
  margin-bottom: 0px;
}

.change-box pre {
  height: 50%;
  padding: 10px;
  overflow-y: auto;
  font-family: monospace;
  font-size: 18px;
  background-color: black;
  border-radius: 10px;
}

.frequency h3,
.frequency p {
  display: inline-block;
}

.frequency h3 {
  margin-right: 5px; /* Adjusts space between the h3 and the value */
}

.explanation-box {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50%;
  padding: 10px;
  overflow-y: auto;
  font-family: monospace;
  font-size: 25px;
  background-color: #444;
  border-radius: 10px;
}

#generate-explanation {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 50px;
  gap: 5px;
  color: white;
  background-color: #333;
}

#generate-explanation:hover {
  background-color: #222;
}

.changes-nav {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.changes-nav button {
  display: flex;
  align-items: center;
  width: 100px;
  padding: 20px;
  gap: 5px; /* Adds spacing between icon and text */
}

#changes-prev {
  justify-content: center;
  text-align: left; /* Ensures the text and icon are aligned to the left */
}

#changes-next {
  justify-content: center;
  text-align: right; /* Ensures the text and icon are aligned to the right */
}

